# wanikani-burnt-kanji-to-anki

./: .coveragerc  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.rst  mise.toml  pyproject.toml  renovate.json  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/python_template/: __init__.py
src/wanikani_burnt_kanji_to_anki/: __init__.py  __main__.py  wanikani.py
tests/: conftest.py  factories.py  test_main.py  test_version.py  test_wanikani.py
