[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wanikani_burnt_kanji_to_anki"
authors = [{name = "Andy Freeland", email = "andy@andyfreeland.net"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]
dynamic = ["version", "description"]
requires-python = "~=3.13.1"

dependencies = [
  "attrs >= 21.3.0",
  "click",
  "httpx",
  "structlog",
]

[project.scripts]
wanikani-burnt-kanji-to-anki = "wanikani_burnt_kanji_to_anki.__main__:cli"

[project.urls]
Home = "https://github.com/rouge8/wanikani-burnt-kanji-to-anki"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"

[tool.mypy]
strict = true
allow_redefinition = true
warn_unreachable = true

[tool.pyright]
venv = "wanikani-burnt-kanji-to-anki"

[tool.hatch.version]
path = "src/wanikani_burnt_kanji_to_anki/__init__.py"

[tool.ruff]
target-version = "py312"
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "B90",
  "D2",
  "D213",
  "D3",
  "D404",
  "C4",
  "UP",
  "ISC",
  "PGH",
  "RUF",
]
ignore = [
  # 1 blank line required before class docstring
  "D203",
  # Our docstring style allows for a multi-line summary, e.g.:
  #
  #"""
  # Prevent database use without the appropriate fixture/marker, used
  # automatically.
  #
  # Additional content goes here.
  #"""
  "D205",
  # Inverse of D213
  "D212",
  # Explicitly concatenated string should be implicitly concatenated
  "ISC003",
]

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true
order-by-type = false
known-first-party = ["wanikani_burnt_kanji_to_anki"]

[tool.ruff.flake8-implicit-str-concat]
allow-multiline = false

[dependency-groups]
dev = [
    "coverage~=7.9.1",
    "factory-boy~=3.3.3",
    "faker~=37.4.0",
    "mypy~=1.16.1",
    "pre-commit~=4.2.0",
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
    "pytest-httpx==0.33.0",
    "pytest-mock~=3.14.1",
    "pytest-randomly~=3.16.0",
]
