[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wanikani_burnt_kanji_to_anki"
authors = [{name = "Andy Freeland", email = "andy@andyfreeland.net"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]
dynamic = ["version", "description"]
requires-python = "~=3.13.1"

dependencies = [
  "attrs~=25.3.0",
  "click~=8.2.1",
  "httpx~=0.27.2",
  "structlog~=25.4.0",
]

[project.scripts]
wanikani-burnt-kanji-to-anki = "wanikani_burnt_kanji_to_anki.__main__:cli"

[project.urls]
Home = "https://github.com/rouge8/wanikani-burnt-kanji-to-anki"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"

[tool.mypy]
strict = true
allow_redefinition = true
warn_unreachable = true

[tool.pyright]
venv = "wanikani-burnt-kanji-to-anki"

[tool.hatch.version]
path = "src/wanikani_burnt_kanji_to_anki/__init__.py"

[tool.ruff]
target-version = "py312"
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "B90",
  "D2",
  "D213",
  "D3",
  "D404",
  "C4",
  "UP",
  "ISC",
  "PGH",
  "RUF",
]
ignore = [
  # 1 blank line required before class docstring
  "D203",
  # Our docstring style allows for a multi-line summary, e.g.:
  #
  #"""
  # Prevent database use without the appropriate fixture/marker, used
  # automatically.
  #
  # Additional content goes here.
  #"""
  "D205",
  # Inverse of D213
  "D212",
  # Explicitly concatenated string should be implicitly concatenated
  "ISC003",
]

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true
order-by-type = false
known-first-party = ["wanikani_burnt_kanji_to_anki"]

[tool.ruff.flake8-implicit-str-concat]
allow-multiline = false

[dependency-groups]
dev = [
    "coverage~=7.10.7",
    "mypy~=1.18.2",
    "pre-commit~=4.3.0",
    "pytest~=8.4.1",
    "pytest-cov~=7.0.0",
    "pytest-randomly~=4.0.1",
    "factory-boy~=3.3.3",
    "faker~=37.8.0",
    "pytest-httpx==0.33.0",
    "pytest-mock~=3.14.1",
]
